--- a/client/package.json
+++ b/client/package.json
@@ -16,46 +16,47 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.28",
+    "expo": "^52.0.33",
     "expo-async-storage": "^0.0.0",
-    "expo-constants": "~16.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.9",
-    "expo-image-manipulator": "~12.0.5",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-sharing": "~12.0.1",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo-constants": "~17.0.5",
+    "expo-file-system": "~18.0.10",
+    "expo-font": "~13.0.3",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
     "firebase": "^10.13.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
-    "react-native": "0.74.5",
+    "react-native": "0.76.7",
     "react-native-config": "^1.5.3",
     "react-native-dropdownalert": "^5.1.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-share": "^11.0.2",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10",
-    "socket.io-client": "^4.8.0"
+    "react-native-web": "~0.19.13",
+    "socket.io-client": "^4.8.0",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
