--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,8 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.13",
     "socket.io-client": "^4.8.0",
-    "expo-linear-gradient": "~14.0.2"
+    "expo-linear-gradient": "~14.0.2",
+    "expo-blur": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
